[B]Please utilize Twilight Tips (Tools->Tips for Twilight Use) to catch up on any important new features. New features will be highlighted with a [COLOR chartreuse]NEW!!![/COLOR] label.[/B]

[COLOR dodgerblue][B]Version 3.2.40[/B][/COLOR]
- Added Clear Debrid + External Providers cache on Kodi startup.
- [B]Tikipeter's version 3.2.20[/B]:
- Fixed some post-results filtering.
- Added "Trakt Favorites" to My Lists.

[COLOR dodgerblue][B]Version 3.2.39[/B][/COLOR]
- Small Ktuvit search bug fix.
- Remove YouTube trailer link from "מתי יגיע לרשת?" messages.
- [B]Tikipeter's version 3.2.19[/B]:
- Quick fix as "FirstRunActions" was running twice on startup.

[COLOR dodgerblue][B]Version 3.2.37[/B][/COLOR]
- Tikipeter's version 3.2.18:
- Quick fix for incorrect rounding down of small TV Show progress floats.
- Other changes/fixes.

[COLOR dodgerblue][B]Version 3.2.36[/B][/COLOR]
- Small HSM text renaming.

[COLOR dodgerblue][B]Version 3.2.35[/B][/COLOR]
- Change "Notify Only Under (Days Until Account Expiration)" setting to numpad (instead of slider).

[COLOR dodgerblue][B]Version 3.2.34[/B][/COLOR]
- Rewrite OpenSubtitles code to use new OpenSubtitles.com API (For subtitles matching feature).
  https://opensubtitles.stoplight.io/

[COLOR dodgerblue][B]Version 3.2.33[/B][/COLOR]
- [B][COLOR yellow]THE NEW ONLINE AUTOMATIC UPDATE METHOD IS NOT RELEVANT TO TWILIGHT ADDON, UPDATES WILL KEEP COMING FROM REPOSITORY ONLY[/COLOR][/B]
- Tikipeter's version 3.2.16 + 3.2.17:
- Added updating ability within the addon. Tools->"Check for Updates" will make Twilight check online for an update for itself. If found, you can choose to install the update. This replaces Kodi's repository and addon management system.
- Added new startup updater to run on Kodi start.
- 2 settings for startup updater in General->Manage Addon Updates:
        
"Delay Before Running": Choose time in seconds to delay the service after Kodi starts. Defaults to 45 secs. Best not to set this too low.
        