@@ -1,4 +1,4 @@
-<addon id="plugin.video.twilight" name="Twilight" provider-name="Twilight" version="3.2.40">
+<addon id="plugin.video.twilight" name="Twilight" provider-name="Twilight" version="3.2.41">
     <requires>
         <import addon="xbmc.python" version="3.0.0"/>
         <import addon="script.module.requests" version="2.19.1"/>
